# PiDeck

./: .gitattributes  .gitignore  LICENSE  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml
.github/workflows/: p0.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/resources/: README.md
apps/desktop/src-tauri/src/: commands.rs  desktop_settings.rs  lib.rs  main.rs  pi_host.rs  pi_host_tests.rs  shell_terminal.rs
docs/: README.md
docs/architecture/: chat-runtime.md  overview.md  packages-workspaces.md  process-boundaries.md  protocol.md  source-map.md
docs/features/: chat-runtime.md
docs/history/: 2026-07-18-full-review.md  2026-07-18-remediation-todo.md  2026-07-18-review-round2.md  pi-web-p0-roadmap.md
docs/operations/: development.md  p0-scope.md  p0-status.json  release-checklist.md  release.md  remediation-report.md
docs/reference/: source-map.md
docs/reviews/: 2026-07-18-full-review.md  (+1 more)
patches/: @earendil-works__pi-coding-agent@0.80.7.patch
scripts/: compact-pi-host-resources.mjs  dev-fast.mjs  p0-evidence.mjs  package-release-sidecar.mjs  package-release.mjs  prepare-release-runtime.mjs  prepare-rust-test-resources.mjs  release-runtime.lock.json  run-e2e.mjs  smoke-host-hello.mjs  smoke-release-host.mjs  smoke-release.mjs  validate-resource-layout.mjs  verify-doc-links.mjs  verify-m0-release-extension.mjs  verify-p0.mjs  windows-installer-integrity.mjs
(+106 files in other folders)
