[package]
name = "pideck"
version = "0.1.0"
description = "PiDeck"
authors = ["PiDeck contributors"]
edition = "2021"

[lib]
name = "pideck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
thiserror = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
